// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TitleBar /> > Snapshot > should match snapshot 1`] = `
<div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <div
      class="TitleBar_title__1kpzw685"
    >
      UNKNOWN.EXE
    </div>
  </div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684"
  >
    <div
      class="TitleBar_title__1kpzw685"
    >
      UNKNOWN.EXE
    </div>
  </div>
</div>
`;

exports[`<TitleBar /> > Snapshot > should match snapshot with all Options 1`] = `
<div>
  <div
    class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683"
  >
    <svg test-file-stub />
    <div
      class="TitleBar_title__1kpzw685"
    >
      test.exe
    </div>
    <div
      class="TitleBar_optionsBox__1kpzw680"
    >
      <button
        class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
      >
        ?
      </button>
      <button
        class="TitleBar_option__1kpzw681 Button_button__1bzq74l0"
      >
        x
      </button>
    </div>
  </div>
</div>
`;
